# test-uv-lib

./: README.md  pyproject.toml
src/module_uv/: __init__.py  main.py
